Global: 'Component Location for Designers'		Feature	Done	please remove the current component breadcrumb Global: 'Component Location for Designers'		Feature	Done	add 'Component Location for Designers' section after 'Design Specs' Global: 'Component Location for Designers' Datepicker		Feature	Done	especially for datepicker, please create another container for the second link Global: Titles typography		Feature	Done	make all the first letter of the title capital Global: 'Contents' typography		Feature	Done	make all the first letter of the title capital

--- a/src/app/shared/sketch-link/sketch-link.html
+++ b/src/app/shared/sketch-link/sketch-link.html
@@ -1,8 +1,7 @@
-<p>
-  Here is how you can add the component to your Sketch design file:
-  <ng-container *ngFor="let link of sketch_link; let i=index last as isLast">
-    <span class="sketch-link">{{link}}</span>
-    <span *ngIf="!isLast">/</span>
-  </ng-container>
-
-</p>
+<div class="sketch-link-container" *ngFor="let link of sketch_links; let i=index" [innerHTML]="link">
+  <!-- <ng-container *ngFor="let path of link; let i=index last as isLast">
+    <span class="sketch-link">{{path}}</span>
+    <span class="sketch-link-splash" *ngIf="!isLast">/</span>
+  </ng-container> -->
+  
+</div>
