--- a/src/assets/documents/components/nodata.html
+++ b/src/assets/documents/components/nodata.html
@@ -13,7 +13,7 @@
   <div class="doc-desc-1">
     Help the user know when there is no data. Don't assume that they'll interpet a blank table or field as "no data". They might
     think the application is broken.</div>
-    <div class="doc-desc-1" sketch-link></div>
+     
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -89,9 +89,9 @@
 
 
   <div class="doc-title-2">
-    Usage & Content guidelines
+    Usage & Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content guidelines</span>
+      <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
 
   <div class="doc-desc-2">
@@ -109,9 +109,9 @@
 
 
   <div class="doc-title-2">
-    Design specs
+    Design Specs
     <span class="docs-markdown-h3" id="design_specs">
-      <span header-link="design_specs"></span>Design specs</span>
+      <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
 
@@ -119,7 +119,14 @@
     <img src="assets/img/doc/nodata-spec.png" alt="" width="290px" height="214px" style="left: 75px">
   </div>
 
-
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Component Location for Designers
+  </div>
+  <div class="doc-desc-2">
+    For designers, to add this component to your design, follow this path within the Sketch App UI:
+  </div>
+  <div sketch-link></div>
 
 
 </body>
