--- a/src/assets/documents/components/slider.html
+++ b/src/assets/documents/components/slider.html
@@ -13,7 +13,7 @@
   </div>
   <div class="doc-desc-1">
     Sliders allow users to make selections from a range of values. </div>
-  <div class="doc-desc-1" sketch-link></div>
+   
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -29,6 +29,14 @@
   <div class="doc-example-container">
     <div app-docs-example="slider-basic"></div>
   </div>
+
+  <!-- <div class="doc-desc-2">
+    Sliders reflect a range of values along a bar, from which users may select a single value. Sliders can have icons on both
+    ends of the bar that reflect a range of values. </div>
+  <div class="doc-example-container">
+    <div app-docs-example="slider-range"></div>
+  </div> -->
+
 
   <!-- <div id="exampleWrapper">
     <div class="doc-desc-2">
@@ -122,7 +130,7 @@
   <div class="doc-title-2">
     Usage &amp; Content guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content guidelines</span>
+      <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
 
   <div class="doc-desc-2">
@@ -145,9 +153,9 @@
   </div>
 
   <div class="doc-title-2">
-    Design specs
+    Design Specs
     <span class="docs-markdown-h3" id="design_specs">
-      <span header-link="design_specs"></span>Design specs</span>
+      <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
 
@@ -155,7 +163,14 @@
     <img src="assets/img/doc/slider-spec.png" alt="">
   </div>
 
-
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Component Location for Designers
+  </div>
+  <div class="doc-desc-2">
+    For designers, to add this component to your design, follow this path within the Sketch App UI:
+  </div>
+  <div sketch-link></div>
 
 
 
