--- a/src/assets/documents/components/toolbar.html
+++ b/src/assets/documents/components/toolbar.html
@@ -11,7 +11,7 @@
     Toolbar  </div>
   <div class="doc-desc-1">
     Toolbar displays information and actions relating to the current screen.  </div>
-    <div class="doc-desc-1" sketch-link></div>
+     
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -82,7 +82,7 @@
   <div class="doc-title-2">
     Usage &amp; Content guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content guidelines</span>
+      <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
 
   <div class="doc-desc-2">
@@ -116,9 +116,9 @@
   </div>
 
   <div class="doc-title-2">
-    Design specs
+    Design Specs
     <span class="docs-markdown-h3" id="design_specs">
-      <span header-link="design_specs"></span>Design specs</span>
+      <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
 
@@ -127,7 +127,14 @@
   </div>
 
 
-
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Component Location for Designers
+  </div>
+  <div class="doc-desc-2">
+    For designers, to add this component to your design, follow this path within the Sketch App UI:
+  </div>
+  <div sketch-link></div>
 
 
 </body>
