--- a/src/assets/documents/components/button.html
+++ b/src/assets/documents/components/button.html
@@ -15,7 +15,7 @@
     Buttons make common actions immediately visible and easy to perform with one click or tap. They can be used for any type
     of action, including navigation.
   </div>
-  <div class="doc-desc-1" sketch-link></div>
+   
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
@@ -125,9 +125,9 @@
 
 
   <div class="doc-title-2">
-    Usage & Content guidelines
+    Usage & Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content guidelines</span>
+      <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
   <div class="doc-desc-2">
     Buttons should be clear and predictable—data analyst should be able to anticipate what will happen when they click a button.
@@ -154,15 +154,23 @@
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
-    Design specs
+    Design Specs
     <span class="docs-markdown-h3" id="design_specs">
-      <span header-link="design_specs"></span>Design specs</span>
+      <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
   <div class="docs-usage-spec docs-usage-center" style="height:280px">
     <img src="assets/img/doc/button-spec.png" alt="">
   </div>
 
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Component Location for Designers
+  </div>
+  <div class="doc-desc-2">
+    For designers, to add this component to your design, follow this path within the Sketch App UI:
+  </div>
+  <div sketch-link></div>
 
 </body>
 
