--- a/src/assets/documents/components/card.html
+++ b/src/assets/documents/components/card.html
@@ -18,7 +18,7 @@
     <p>Cards are a convenient means of displaying content composed of different elements. They’re also well-suited for showcasing
       elements whose size or supported actions vary, like photos with captions of variable length.</p>
   </div>
-  <div class="doc-desc-1" sketch-link></div>
+   
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
@@ -108,9 +108,9 @@
 
 
   <div class="doc-title-2">
-    Usage & Content guidelines
+    Usage & Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content guidelines</span>
+      <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
   <div class="doc-desc-2">
       On desktop and mobile, cards can have a resting elevation of 1dp. They elevate to 8dp on hover.</div>
@@ -124,15 +124,23 @@
   </div>
   
   <div class="doc-title-2">
-    Design specs
+    Design Specs
     <span class="docs-markdown-h3" id="design_specs">
-      <span header-link="design_specs"></span>Design specs</span>
+      <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
   <div class="docs-usage-spec docs-usage-center" style="height:600px">
     <img src="assets/img/doc/card-spec.png" alt="">
   </div>
 
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Component Location for Designers
+  </div>
+  <div class="doc-desc-2">
+    For designers, to add this component to your design, follow this path within the Sketch App UI:
+  </div>
+  <div sketch-link></div>
 
 </body>
 
