--- a/src/assets/documents/components/checkbox.html
+++ b/src/assets/documents/components/checkbox.html
@@ -16,7 +16,7 @@
     Checkboxes allow the user to select one or more items from a set. Checkboxes can be used to turn an option on or off.
   </div>
 
-  <div class="doc-desc-1" sketch-link></div>
+   
 
 
   <div class="doc-divider">
@@ -121,9 +121,9 @@
 
 
   <div class="doc-title-2">
-    Usage & Content guidelines
+    Usage & Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content guidelines</span>
+      <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
 
   <div class="doc-desc-2">
@@ -158,9 +158,9 @@
   </div>
 
   <div class="doc-title-2">
-    Design specs
+    Design Specs
     <span class="docs-markdown-h3" id="design_specs">
-      <span header-link="design_specs"></span>Design specs</span>
+      <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
 
@@ -168,6 +168,14 @@
     <img src="assets/img/doc/checkbox-design.png" alt="">
   </div>
 
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Component Location for Designers
+  </div>
+  <div class="doc-desc-2">
+    For designers, to add this component to your design, follow this path within the Sketch App UI:
+  </div>
+  <div sketch-link></div>
 
 
 
