--- a/src/assets/documents/components/datepicker.html
+++ b/src/assets/documents/components/datepicker.html
@@ -15,7 +15,7 @@
   <div class="doc-desc-1">
       The Datepicker component allows the user to enter a date or date range either through text input or by choosing from the calendar.
   </div>
-  <div class="doc-desc-1" sketch-link></div>
+   
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Example
@@ -120,6 +120,15 @@
     <img src="assets/img/doc/datepicker-spec.png" alt="">
   </div>
 
+
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Component Location for Designers
+  </div>
+  <div class="doc-desc-2">
+    For designers, to add this component to your design, follow this path within the Sketch App UI:
+  </div>
+  <div sketch-link></div>
 
   </div>
 </body>
