--- a/src/assets/documents/components/dialog.html
+++ b/src/assets/documents/components/dialog.html
@@ -20,7 +20,7 @@
       sparingly because they are interruptive.
     </p>
   </div>
-  <div class="doc-desc-1" sketch-link></div>
+   
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -114,7 +114,7 @@
   <div class="doc-title-2">
     Usage &amp; Content guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content guidelines</span>
+      <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
 
   <div class="doc-desc-2">
@@ -152,9 +152,9 @@
   </div>
 
   <div class="doc-title-2">
-    Design specs
+    Design Specs
     <span class="docs-markdown-h3" id="design_specs">
-      <span header-link="design_specs"></span>Design specs</span>
+      <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
 
@@ -162,7 +162,14 @@
     <img src="assets/img/doc/dialog-spec.png" alt="">
   </div>
 
-
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Component Location for Designers
+  </div>
+  <div class="doc-desc-2">
+    For designers, to add this component to your design, follow this path within the Sketch App UI:
+  </div>
+  <div sketch-link></div>
 
   
 
