--- a/src/assets/documents/components/expansionpanel.html
+++ b/src/assets/documents/components/expansionpanel.html
@@ -14,7 +14,7 @@
   <div class="doc-desc-1">
     Expansion Panels contain creation flows and allow lightweight editing of an element.
   </div>
-  <div class="doc-desc-1" sketch-link></div>
+   
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
@@ -87,9 +87,9 @@
   <div class="doc-divider"></div>
 
   <div class="doc-title-2">
-    Usage & Content guidelines
+    Usage & Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content guidelines</span>
+      <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
   <div class="doc-desc-2">
     As for expanded rows, use grey background colof with top and bottom shadows to distinguish from main rows.
@@ -109,9 +109,9 @@
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
-    Design specs
+    Design Specs
     <span class="docs-markdown-h3" id="design_specs">
-      <span header-link="design_specs"></span>Design specs</span>
+      <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
   
@@ -120,6 +120,15 @@
     alt="">
   </div>
   
+
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Component Location for Designers
+  </div>
+  <div class="doc-desc-2">
+    For designers, to add this component to your design, follow this path within the Sketch App UI:
+  </div>
+  <div sketch-link></div>
 </body>
 
 
