--- a/src/assets/documents/components/footer.html
+++ b/src/assets/documents/components/footer.html
@@ -15,7 +15,7 @@
     Footers are a great way to organize a lot of site navigation and information at the end of a page. This is where the user
     will look once they have finished scrolling through the current page or are looking for additional information about
     your website. </div>
-    <div class="doc-desc-1" sketch-link></div>
+     
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
@@ -85,9 +85,9 @@
 
 
   <div class="doc-title-2">
-    Usage & Content guidelines
+    Usage & Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content guidelines</span>
+      <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
   <div class="doc-desc-2">
     If title text is long, use a prominent app bar and wrap the title to two lines. Don’t truncate text, hiding the full title
@@ -106,16 +106,24 @@
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
-    Design specs
+    Design Specs
     <span class="docs-markdown-h3" id="design_specs">
-      <span header-link="design_specs"></span>Design specs</span>
+      <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
   <div class="docs-usage-spec docs-usage-center" style="height:248px">
     <img src="assets/img/doc/footer-spec.png" alt="">
   </div>
 
- 
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Component Location for Designers
+  </div>
+  <div class="doc-desc-2">
+    For designers, to add this component to your design, follow this path within the Sketch App UI:
+  </div>
+  <div sketch-link></div>
+
 </body>
 
 
