--- a/src/assets/documents/components/formfield.html
+++ b/src/assets/documents/components/formfield.html
@@ -14,7 +14,7 @@
   <div class="doc-desc-1">
     Text fields let users enter and edit text.
   </div>
-  <div class="doc-desc-1" sketch-link></div>
+   
   <div class="doc-divider"></div>
 
   <div class="doc-title-2">
@@ -122,9 +122,9 @@
   <div class="doc-divider"></div>
 
   <div class="doc-title-2">
-    Usage & Content guidelines
+    Usage & Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content guidelines</span>
+      <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
   <div class="doc-desc-2">
     Label text should be short, clear, and fully visible. It shouldn’t be truncated.
@@ -150,15 +150,24 @@
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
-    Design specs
+    Design Specs
     <span class="docs-markdown-h3" id="design_specs">
-      <span header-link="design_specs"></span>Design specs</span>
+      <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
 
   <div class="docs-usage-spec docs-usage-center" style="height:280px">
     <img src="assets/img/doc/formfield-spec.png" alt="">
   </div>
+
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Component Location for Designers
+  </div>
+  <div class="doc-desc-2">
+    For designers, to add this component to your design, follow this path within the Sketch App UI:
+  </div>
+  <div sketch-link></div>
 
 </body>
 
