--- a/src/assets/documents/components/header.html
+++ b/src/assets/documents/components/header.html
@@ -15,7 +15,7 @@
   <div class="doc-desc-1">
     Header appears on top all other surfaces in an app, displaying information and actions globally or relating to the current
     screen. </div>
-  <div class="doc-desc-1" sketch-link></div>
+   
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
@@ -143,10 +143,10 @@
 
 
   <div class="doc-title-2">
-    Usage & Content guidelines
+    Usage & Content Guidelines
     <span class="docs-markdown-h3"
           id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content guidelines</span>
+      <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
   <div class="doc-desc-2">
     If title text is long, use a prominent app bar and wrap the title to two lines. Don’t truncate text, hiding the full title
@@ -166,10 +166,10 @@
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
-    Design specs
+    Design Specs
     <span class="docs-markdown-h3"
           id="design_specs">
-      <span header-link="design_specs"></span>Design specs</span>
+      <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
   <div class="docs-usage-spec docs-usage-center"
@@ -178,7 +178,15 @@
          alt="">
   </div>
 
-
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Component Location for Designers
+  </div>
+  <div class="doc-desc-2">
+    For designers, to add this component to your design, follow this path within the Sketch App UI:
+  </div>
+  <div sketch-link></div>
+  
 </body>
 
 
