--- a/src/assets/documents/components/headerfooter.html
+++ b/src/assets/documents/components/headerfooter.html
@@ -126,9 +126,9 @@
 
 
   <div class="doc-title-2">
-    Usage & Content guidelines
+    Usage & Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content guidelines</span>
+      <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
   <div class="doc-desc-2">
       If title text is long, use a prominent app bar and wrap the title to two lines. Don’t truncate text, hiding the full title may cause misunderstanding. Don’t shrink text to fit on a single line.
@@ -143,9 +143,9 @@
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
-    Design specs
+    Design Specs
     <span class="docs-markdown-h3" id="design_specs">
-      <span header-link="design_specs"></span>Design specs</span>
+      <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
   <div class="docs-usage-spec docs-usage-center" style="height:400px">
