--- a/src/assets/documents/components/list.html
+++ b/src/assets/documents/components/list.html
@@ -15,7 +15,7 @@
   <div class="doc-desc-1">
     Lists are a continuous group of text or images. They are composed of items containing primary and supplemental actions, which
     are represented by icons and text. </div>
-    <div class="doc-desc-1" sketch-link></div>
+     
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -99,7 +99,7 @@
     Usage &amp; Content guidelines
     <span class="docs-markdown-h3"
           id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content guidelines</span>
+      <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
 
   <div class="doc-desc-2">
@@ -122,10 +122,10 @@
   <div class="doc-divider"></div>
 
   <div class="doc-title-2">
-    Design specs
+    Design Specs
     <span class="docs-markdown-h3"
           id="design_specs">
-      <span header-link="design_specs"></span>Design specs</span>
+      <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
   <div class="docs-usage-spec docs-usage-center"
@@ -133,7 +133,15 @@
     <img src="assets/img/doc/list-spec.png"
          alt="">
   </div>
-
+  
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Component Location for Designers
+  </div>
+  <div class="doc-desc-2">
+    For designers, to add this component to your design, follow this path within the Sketch App UI:
+  </div>
+  <div sketch-link></div>
 
 </body>
 
