--- a/src/assets/documents/components/login.html
+++ b/src/assets/documents/components/login.html
@@ -11,7 +11,7 @@
     Login  </div>
   <div class="doc-desc-1">
     Users are requires to login to fully access to Vizient MDA dashboards.  </div>
-  <div class="doc-desc-1" sketch-link></div>
+   
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -82,7 +82,7 @@
   <div class="doc-title-2">
     Usage &amp; Content guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content guidelines</span>
+      <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
 
   <div class="doc-desc-2">
@@ -116,9 +116,9 @@
   </div>
 
   <div class="doc-title-2">
-    Design specs
+    Design Specs
     <span class="docs-markdown-h3" id="design_specs">
-      <span header-link="design_specs"></span>Design specs</span>
+      <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
 
@@ -126,7 +126,14 @@
     <img src="assets/img/doc/login-spec.png" alt="">
   </div>
 
-
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Component Location for Designers
+  </div>
+  <div class="doc-desc-2">
+    For designers, to add this component to your design, follow this path within the Sketch App UI:
+  </div>
+  <div sketch-link></div>
 
  
 </body>
