--- a/src/assets/documents/components/progressbar.html
+++ b/src/assets/documents/components/progressbar.html
@@ -14,7 +14,7 @@
   <div class="doc-desc-1">
     Linear progress indicators display progress by animating an indicator along the length of a fixed, visible track. The behavior
     of the indicator is dependent on whether the progress of a process is known. </div>
-    <div class="doc-desc-1" sketch-link></div>
+     
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -113,7 +113,7 @@
   <div class="doc-title-2">
     Usage &amp; Content guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content guidelines</span>
+      <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
 
   <div class="doc-desc-2">
@@ -137,9 +137,9 @@
   </div>
 
   <div class="doc-title-2">
-    Design specs
+    Design Specs
     <span class="docs-markdown-h3" id="design_specs">
-      <span header-link="design_specs"></span>Design specs</span>
+      <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
 
@@ -148,7 +148,14 @@
   </div>
 
 
-
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Component Location for Designers
+  </div>
+  <div class="doc-desc-2">
+    For designers, to add this component to your design, follow this path within the Sketch App UI:
+  </div>
+  <div sketch-link></div>
   
 
 
