--- a/src/assets/documents/components/progressspinner.html
+++ b/src/assets/documents/components/progressspinner.html
@@ -14,7 +14,7 @@
   <div class="doc-desc-1">
     Circular progress indicators display progress by animating an indicator along an invisible circular track in a clockwise
     direction. They can be applied directly to a surface, such as a button or card. </div>
-    <div class="doc-desc-1" sketch-link></div>
+     
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -119,7 +119,7 @@
   <div class="doc-title-2">
     Usage &amp; Content guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content guidelines</span>
+      <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
 
   <div class="doc-desc-2">
@@ -144,9 +144,9 @@
       </div>
 
       <div class="doc-title-2">
-        Design specs
+        Design Specs
         <span class="docs-markdown-h3" id="design_specs">
-          <span header-link="design_specs"></span>Design specs</span>
+          <span header-link="design_specs"></span>Design Specs</span>
       </div>
 
 
@@ -155,7 +155,14 @@
       </div>
 
 
-
+      <div class="doc-divider"></div>
+      <div class="doc-title-2">
+        Component Location for Designers
+      </div>
+      <div class="doc-desc-2">
+        For designers, to add this component to your design, follow this path within the Sketch App UI:
+      </div>
+      <div sketch-link></div>
 
 
 
