--- a/src/assets/documents/components/radio.html
+++ b/src/assets/documents/components/radio.html
@@ -14,7 +14,7 @@
   </div>
   <div class="doc-desc-1">
     Radio buttons allow the user to select one option from a set. </div>
-    <div class="doc-desc-1" sketch-link></div>
+     
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -104,7 +104,7 @@
     Usage &amp; Content guidelines
     <span class="docs-markdown-h3"
           id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content guidelines</span>
+      <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
 
   <div class="doc-desc-2">
@@ -132,10 +132,10 @@
   </div>
 
   <div class="doc-title-2">
-    Design specs
+    Design Specs
     <span class="docs-markdown-h3"
           id="design_specs">
-      <span header-link="design_specs"></span>Design specs</span>
+      <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
 
@@ -146,7 +146,14 @@
   </div>
 
 
-
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Component Location for Designers
+  </div>
+  <div class="doc-desc-2">
+    For designers, to add this component to your design, follow this path within the Sketch App UI:
+  </div>
+  <div sketch-link></div>
 
 
 </body>
