--- a/src/assets/documents/components/slidetoggle.html
+++ b/src/assets/documents/components/slidetoggle.html
@@ -13,7 +13,7 @@
     Slide Toggle </div>
   <div class="doc-desc-1">
     Slider Toggles are used for binary actions. They are commonly used for “On/Off” situations. </div>
-    <div class="doc-desc-1" sketch-link></div>
+     
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -99,7 +99,7 @@
     Usage &amp; Content guidelines
     <span class="docs-markdown-h3"
           id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content guidelines</span>
+      <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
 
   <div class="doc-desc-2">
@@ -126,10 +126,10 @@
   </div>
 
   <div class="doc-title-2">
-    Design specs
+    Design Specs
     <span class="docs-markdown-h3"
           id="design_specs">
-      <span header-link="design_specs"></span>Design specs</span>
+      <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
 
@@ -139,7 +139,14 @@
          alt="">
   </div>
 
-
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Component Location for Designers
+  </div>
+  <div class="doc-desc-2">
+    For designers, to add this component to your design, follow this path within the Sketch App UI:
+  </div>
+  <div sketch-link></div>
 
 
 </body>
