--- a/src/assets/documents/components/snackbar.html
+++ b/src/assets/documents/components/snackbar.html
@@ -16,7 +16,7 @@
     temporarily, towards the bottom of the screen. They shouldn’t interrupt the user experience, and they don’t require user
     input to disappear. They may contain a text action, but no icons. Only one snackbar may be displayed at a time.
   </div>
-  <div class="doc-desc-1" sketch-link></div>
+   
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -129,7 +129,7 @@
   <div class="doc-title-2">
     Usage &amp; Content guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content guidelines</span>
+      <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
 
   <div class="doc-desc-2">
@@ -147,7 +147,7 @@
   </div>
 
   <div class="doc-desc-2">
-      Don’t place icons in snackbars. If your message needs an icon, consider using an alert.
+    Don’t place icons in snackbars. If your message needs an icon, consider using an alert.
   </div>
 
   <div class="docs-guideline-group">
@@ -158,7 +158,7 @@
 
 
   <div class="doc-desc-2">
-      The text label shouldn’t share the same color as the text button.
+    The text label shouldn’t share the same color as the text button.
   </div>
 
   <div class="docs-guideline-group">
@@ -169,7 +169,7 @@
 
 
   <div class="doc-desc-2">
-      Don’t use a filled or elevated button in a snackbar, as it draws too much attention.
+    Don’t use a filled or elevated button in a snackbar, as it draws too much attention.
   </div>
 
   <div class="docs-guideline-group">
@@ -183,9 +183,9 @@
   </div>
 
   <div class="doc-title-2">
-    Design specs
+    Design Specs
     <span class="docs-markdown-h3" id="design_specs">
-      <span header-link="design_specs"></span>Design specs</span>
+      <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
 
@@ -194,10 +194,17 @@
   </div>
 
   <div class="docs-usage-spec docs-usage-center docs-mt16" style="height:280px;">
-      <img src="assets/img/doc/snack-mobile-spec.png" alt="" style="left:-265px;max-width:fit-content">
-    </div>
+    <img src="assets/img/doc/snack-mobile-spec.png" alt="">
+  </div>
 
-  
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Component Location for Designers
+  </div>
+  <div class="doc-desc-2">
+    For designers, to add this component to your design, follow this path within the Sketch App UI:
+  </div>
+  <div sketch-link></div>
 
 </body>
 
