--- a/src/assets/documents/components/chip.html
+++ b/src/assets/documents/components/chip.html
@@ -14,7 +14,7 @@
   <div class="doc-desc-1">
     Chips are compact elements that represent an input, attribute, or action.
   </div>
-   
+
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
@@ -261,6 +261,8 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
