--- a/src/assets/documents/components/datepicker.html
+++ b/src/assets/documents/components/datepicker.html
@@ -13,9 +13,10 @@
     Datepicker
   </div>
   <div class="doc-desc-1">
-      The Datepicker component allows the user to enter a date or date range either through text input or by choosing from the calendar.
+    The Datepicker component allows the user to enter a date or date range either through text input or by choosing from the
+    calendar.
   </div>
-   
+
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Example
@@ -25,7 +26,7 @@
   </div>
 
   <div class="doc-desc-2">
-      Use in forms to allow the user to enter a date or date range.
+    Use in forms to allow the user to enter a date or date range.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="date-picker-single"></div>
@@ -48,7 +49,7 @@
       <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
-      To get a customized datepicker, just set
+    To get a customized datepicker, just set
     <span class="doc-desc-2-highlight">date/onApply</span>
   </div>
   <table class="doc-props-table">
@@ -83,7 +84,7 @@
   </div>
 
   <div class="doc-desc-2">
-      The Datepicker component should:
+    The Datepicker component should:
     <ul class="doc-list">
       <li>Allow user to input a date or date range.</li>
       <li>Be inputed through text input or by choosing date from calendar.</li>
@@ -99,7 +100,7 @@
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
   <div class="doc-desc-2">
-      Always disable the dates that the user should not be able interact with.
+    Always disable the dates that the user should not be able interact with.
   </div>
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:291px">
@@ -124,6 +125,8 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
