--- a/src/assets/documents/components/footer.html
+++ b/src/assets/documents/components/footer.html
@@ -15,7 +15,7 @@
     Footers are a great way to organize a lot of site navigation and information at the end of a page. This is where the user
     will look once they have finished scrolling through the current page or are looking for additional information about
     your website. </div>
-     
+
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
@@ -101,8 +101,8 @@
       <img src="assets/img/doc/footer-one-dont.png" alt="">
     </div>
     <div class="docs-usage-dont docs-usage-w100 docs-usage-center" style="height:160px;margin-top:24px">
-        <img src="assets/img/doc/footer-two-dont.png" alt="">
-      </div>
+      <img src="assets/img/doc/footer-two-dont.png" alt="">
+    </div>
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
@@ -118,6 +118,8 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
