--- a/src/assets/documents/components/list.html
+++ b/src/assets/documents/components/list.html
@@ -5,8 +5,7 @@
 <body>
   <div class="doc-category-title ">
     Layout
-    <span class="docs-markdown-h3"
-          id="contents">
+    <span class="docs-markdown-h3" id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
@@ -15,15 +14,13 @@
   <div class="doc-desc-1">
     Lists are a continuous group of text or images. They are composed of items containing primary and supplemental actions, which
     are represented by icons and text. </div>
-     
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-more-example"
-          doc-viewer-extend="exampleWrapper"></span>
-    <span class="docs-markdown-h3"
-          id="examples">
+    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
+    <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
 
@@ -46,8 +43,7 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Props
-    <span class="docs-markdown-h3"
-          id="props">
+    <span class="docs-markdown-h3" id="props">
       <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
@@ -75,8 +71,7 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Best Practices
-    <span class="docs-markdown-h3"
-          id="best_practices">
+    <span class="docs-markdown-h3" id="best_practices">
       <span header-link="best_practices"></span>Best Practices</span>
   </div>
 
@@ -96,9 +91,8 @@
   <div class="doc-divider"></div>
 
   <div class="doc-title-2">
-    Usage &amp; Content guidelines
-    <span class="docs-markdown-h3"
-          id="content_guidelines">
+    Usage &amp; Content Guidelines
+    <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
 
@@ -107,15 +101,11 @@
   </div>
 
   <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w100 docs-usage-center"
-         style="height:304px">
-      <img src="assets/img/doc/list-do.png"
-           alt="">
+    <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:304px">
+      <img src="assets/img/doc/list-do.png" alt="">
     </div>
-    <div class="docs-usage-dont docs-usage-w100 docs-usage-center"
-         style="height:304px;margin-top:24px">
-      <img src="assets/img/doc/list-dont.png"
-           alt="">
+    <div class="docs-usage-dont docs-usage-w100 docs-usage-center" style="height:304px;margin-top:24px">
+      <img src="assets/img/doc/list-dont.png" alt="">
     </div>
   </div>
 
@@ -123,20 +113,19 @@
 
   <div class="doc-title-2">
     Design Specs
-    <span class="docs-markdown-h3"
-          id="design_specs">
+    <span class="docs-markdown-h3" id="design_specs">
       <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
-  <div class="docs-usage-spec docs-usage-center"
-       style="height:368px">
-    <img src="assets/img/doc/list-spec.png"
-         alt="">
+  <div class="docs-usage-spec docs-usage-center" style="height:368px">
+    <img src="assets/img/doc/list-spec.png" alt="">
   </div>
-  
+
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
