--- a/src/assets/documents/components/login.html
+++ b/src/assets/documents/components/login.html
@@ -4,14 +4,15 @@
 
 <body>
   <div class="doc-category-title ">
-    Popups & Modals    <span class="docs-markdown-h3" id="contents">
+    Popups & Modals
+    <span class="docs-markdown-h3" id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
-    Login  </div>
+    Login </div>
   <div class="doc-desc-1">
-    Users are requires to login to fully access to Vizient MDA dashboards.  </div>
-   
+    Users are requires to login to fully access to Vizient MDA dashboards. </div>
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -20,7 +21,7 @@
       <span header-link="examples"></span>Examples</span>
   </div>
   <div class="doc-desc-2">
-    Login is a required step to enter Vizient MDA dashboards.  </div>
+    Login is a required step to enter Vizient MDA dashboards. </div>
   <div class="doc-example-container">
     <div app-docs-example="login-basic"></div>
   </div>
@@ -67,7 +68,8 @@
   </div>
 
   <div class="doc-desc-2">
-    Login should:    <ul class="doc-list">
+    Login should:
+    <ul class="doc-list">
       <li>Be clearly labeled so it’s obvious to the users what they need to provide to be logged in.</li>
       <li>Only ask for information that’s really needed.</li>
       <li>Validate input as soon as user has finished interacting with a field.</li>
@@ -80,7 +82,7 @@
 
 
   <div class="doc-title-2">
-    Usage &amp; Content guidelines
+    Usage &amp; Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
@@ -129,13 +131,15 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
   <div sketch-link></div>
 
- 
+
 </body>
 
 </html>
