--- a/src/assets/documents/components/progressbar.html
+++ b/src/assets/documents/components/progressbar.html
@@ -14,7 +14,7 @@
   <div class="doc-desc-1">
     Linear progress indicators display progress by animating an indicator along the length of a fixed, visible track. The behavior
     of the indicator is dependent on whether the progress of a process is known. </div>
-     
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -62,9 +62,8 @@
       </tr>
       <tr>
         <td>mode</td>
-        <td>Mode of the progress bar.
-
-          Input must be one of these values: determinate, indeterminate, buffer, query, defaults to 'determinate'. Mirrored to mode attribute.</td>
+        <td>Mode of the progress bar. Input must be one of these values: determinate, indeterminate, buffer, query, defaults
+          to 'determinate'. Mirrored to mode attribute.</td>
         <td>string</td>
         <td>determinate</td>
       </tr>
@@ -111,7 +110,7 @@
 
 
   <div class="doc-title-2">
-    Usage &amp; Content guidelines
+    Usage &amp; Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
@@ -151,12 +150,14 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
   <div sketch-link></div>
-  
+
 
 
 </body>
