--- a/src/assets/documents/components/progressspinner.html
+++ b/src/assets/documents/components/progressspinner.html
@@ -14,7 +14,7 @@
   <div class="doc-desc-1">
     Circular progress indicators display progress by animating an indicator along an invisible circular track in a clockwise
     direction. They can be applied directly to a surface, such as a button or card. </div>
-     
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -117,15 +117,15 @@
 
 
   <div class="doc-title-2">
-    Usage &amp; Content guidelines
+    Usage &amp; Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
 
   <div class="doc-desc-2">
     Use circular indicators for short, indeterminate activities (
-    < 5 seconds) requiring user attention. Don’t apply progress
-      indicators to every button in your app. They can unnecessarily interrupt the user’s task.</div>
+    < 5 seconds) requiring user attention. Don’t apply progress indicators to every button in your app. They can unnecessarily
+      interrupt the user’s task.</div>
 
       <div class="docs-guideline-group">
         <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:489px">
@@ -158,6 +158,8 @@
       <div class="doc-divider"></div>
       <div class="doc-title-2">
         Component Location for Designers
+        <span class="docs-markdown-h3" id="component_location_for_designers">
+          <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
       </div>
       <div class="doc-desc-2">
         For designers, to add this component to your design, follow this path within the Sketch App UI:
