--- a/src/assets/documents/components/snackbar.html
+++ b/src/assets/documents/components/snackbar.html
@@ -16,7 +16,7 @@
     temporarily, towards the bottom of the screen. They shouldn’t interrupt the user experience, and they don’t require user
     input to disappear. They may contain a text action, but no icons. Only one snackbar may be displayed at a time.
   </div>
-   
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -127,7 +127,7 @@
 
 
   <div class="doc-title-2">
-    Usage &amp; Content guidelines
+    Usage &amp; Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
@@ -190,16 +190,18 @@
 
 
   <div class="docs-usage-spec docs-usage-center" style="height:280px">
-    <img src="assets/img/doc/snack-pc-spec.png" alt="">
+    <img src="assets/img/doc/snack-pc-spec.png" alt="" style="transform:scale(0.63)">
   </div>
 
   <div class="docs-usage-spec docs-usage-center docs-mt16" style="height:280px;">
-    <img src="assets/img/doc/snack-mobile-spec.png" alt="">
+    <img src="assets/img/doc/snack-mobile-spec.png" alt="" style="transform:scale(0.8)">
   </div>
 
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
