--- a/src/assets/documents/components/table.html
+++ b/src/assets/documents/components/table.html
@@ -14,7 +14,7 @@
   <div class="doc-desc-1">
     Table provides a Vizient styled data-table that can be used to display rows of data. A data table contains a header row at
     the top that lists column names, followed by rows for data.</div>
-     
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -138,7 +138,7 @@
 
 
   <div class="doc-title-2">
-    Usage &amp; Content guidelines
+    Usage &amp; Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
@@ -176,6 +176,8 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
