--- a/src/assets/documents/components/tabs.html
+++ b/src/assets/documents/components/tabs.html
@@ -14,7 +14,7 @@
   <div class="doc-desc-1">
     Tabs organize and allow navigation between groups of content that are related and at the same level of hierarchy.
   </div>
-   
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -38,7 +38,7 @@
     </div>
   </div>
 
-  
+
 
   <div class="doc-divider">
   </div>
@@ -128,9 +128,12 @@
   <div class="doc-desc-2">
     Tabs should be:
     <ul class="doc-list">
-      <li><span class="doc-bold-title">Scalable: </span>As tabs can horizontally scroll, a UI can have as many tabs as needed.</li>
-      <li><span class="doc-bold-title">Informative: </span>Tabs organize content into categories to help users easily find different types of information.</li>
-      <li><span class="doc-bold-title">Peers: </span>Tabs are displayed next to each other as peers, in categories of equal importance.</li>
+      <li>
+        <span class="doc-bold-title">Scalable: </span>As tabs can horizontally scroll, a UI can have as many tabs as needed.</li>
+      <li>
+        <span class="doc-bold-title">Informative: </span>Tabs organize content into categories to help users easily find different types of information.</li>
+      <li>
+        <span class="doc-bold-title">Peers: </span>Tabs are displayed next to each other as peers, in categories of equal importance.</li>
     </ul>
   </div>
 
@@ -140,7 +143,7 @@
 
 
   <div class="doc-title-2">
-    Usage &amp; Content guidelines
+    Usage &amp; Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
@@ -191,13 +194,15 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
   <div sketch-link></div>
 
- 
+
 
 </body>
 
