--- a/src/assets/documents/components/tooltip.html
+++ b/src/assets/documents/components/tooltip.html
@@ -16,7 +16,7 @@
     upon tapping and holding a screen element or component (on mobile) or hovering over it (desktop). Continuously display
     the tooltip as long as the user long-presses or hovers over the element.
   </div>
-   
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -184,7 +184,7 @@
 
 
   <div class="doc-title-2">
-    Usage &amp; Content guidelines
+    Usage &amp; Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
@@ -236,6 +236,8 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
