--- a/src/assets/documents/components/dialog.html
+++ b/src/assets/documents/components/dialog.html
@@ -20,7 +20,7 @@
       sparingly because they are interruptive.
     </p>
   </div>
-   
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -112,7 +112,7 @@
 
 
   <div class="doc-title-2">
-    Usage &amp; Content guidelines
+    Usage &amp; Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
@@ -165,13 +165,15 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
   <div sketch-link></div>
 
-  
+
 
 </body>
 
