--- a/src/assets/documents/components/expansionpanel.html
+++ b/src/assets/documents/components/expansionpanel.html
@@ -14,7 +14,7 @@
   <div class="doc-desc-1">
     Expansion Panels contain creation flows and allow lightweight editing of an element.
   </div>
-   
+
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
@@ -97,14 +97,14 @@
   <div class="docs-guideline-group">
     <div class="docs-usage-do">
       <div style="width: 100%; height: 352px" class="docs-usage-center">
-        <img  class="expansionpanel-usage" src="assets/img/doc/expansionpanel-do.png" alt="">
+        <img class="expansionpanel-usage" src="assets/img/doc/expansionpanel-do.png" alt="">
       </div>
     </div>
-    <div class="docs-usage-dont docs-mt16" >
-        <div style="width: 100%; height: 352px" class="docs-usage-center">
-          <img  class="expansionpanel-usage" src="assets/img/doc/expansionpanel-dont.png" alt="">
-        </div>
+    <div class="docs-usage-dont docs-mt16">
+      <div style="width: 100%; height: 352px" class="docs-usage-center">
+        <img class="expansionpanel-usage" src="assets/img/doc/expansionpanel-dont.png" alt="">
       </div>
+    </div>
 
   </div>
   <div class="doc-divider"></div>
@@ -114,16 +114,17 @@
       <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
-  
+
   <div class="docs-usage-spec docs-usage-center" style="height:369px">
-    <img src="assets/img/doc/expansionpanel-spec.png"
-    alt="">
+    <img src="assets/img/doc/expansionpanel-spec.png" alt="">
   </div>
-  
+
 
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
