--- a/src/assets/documents/components/feedbackindicator.html
+++ b/src/assets/documents/components/feedbackindicator.html
@@ -14,7 +14,7 @@
   <div class="doc-desc-1">
     Feedback indicator is used to inform user about important changes or persistent conditions. Feedback indicator shows at the
     top of the page or section they apply to.</div>
-   
+
   <div class="doc-divider">
 
   </div>
@@ -135,6 +135,8 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
