--- a/src/assets/documents/components/formfield.html
+++ b/src/assets/documents/components/formfield.html
@@ -14,7 +14,7 @@
   <div class="doc-desc-1">
     Text fields let users enter and edit text.
   </div>
-   
+
   <div class="doc-divider"></div>
 
   <div class="doc-title-2">
@@ -163,6 +163,8 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
