--- a/src/assets/documents/components/icon.html
+++ b/src/assets/documents/components/icon.html
@@ -15,7 +15,7 @@
     The approved icon set is a typeface called Material Icon Font, which provides flexible, scalable vector icons that can be
     plugged into any application without taxing the browser with a multitude of icon images.
   </div>
-   
+
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
@@ -152,6 +152,8 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
