--- a/src/assets/documents/components/nodata.html
+++ b/src/assets/documents/components/nodata.html
@@ -13,7 +13,7 @@
   <div class="doc-desc-1">
     Help the user know when there is no data. Don't assume that they'll interpet a blank table or field as "no data". They might
     think the application is broken.</div>
-     
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -122,6 +122,8 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
