--- a/src/assets/documents/components/sidenav.html
+++ b/src/assets/documents/components/sidenav.html
@@ -14,7 +14,7 @@
   <div class="doc-desc-1">
     The sidenav components are designed to provide access to destinations in your app. They can either be permanently on-screen
     or controlled by a navigation menu icon.</div>
-     
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -127,6 +127,8 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
