--- a/src/assets/documents/components/slidetoggle.html
+++ b/src/assets/documents/components/slidetoggle.html
@@ -5,22 +5,20 @@
 <body>
   <div class="doc-category-title ">
     Form Control
-    <span class="docs-markdown-h3"
-          id="contents">
+    <span class="docs-markdown-h3" id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
     Slide Toggle </div>
   <div class="doc-desc-1">
     Slider Toggles are used for binary actions. They are commonly used for “On/Off” situations. </div>
-     
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
     Examples
     <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
-    <span class="docs-markdown-h3"
-          id="examples">
+    <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
 
@@ -42,8 +40,7 @@
   </div>
   <div class="doc-title-2">
     Props
-    <span class="docs-markdown-h3"
-          id="props">
+    <span class="docs-markdown-h3" id="props">
       <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
@@ -77,8 +74,7 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Best Practices
-    <span class="docs-markdown-h3"
-          id="best_practices">
+    <span class="docs-markdown-h3" id="best_practices">
       <span header-link="best_practices"></span>Best Practices</span>
   </div>
 
@@ -96,9 +92,8 @@
 
 
   <div class="doc-title-2">
-    Usage &amp; Content guidelines
-    <span class="docs-markdown-h3"
-          id="content_guidelines">
+    Usage &amp; Content Guidelines
+    <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
 
@@ -106,15 +101,11 @@
     Do not alternate the main color of the toggle </div>
 
   <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w50 docs-usage-center"
-         style="height:200px">
-      <img src="assets/img/doc/slidertoggle-do.png"
-           alt="">
+    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:200px">
+      <img src="assets/img/doc/slidertoggle-do.png" alt="">
     </div>
-    <div class="docs-usage-dont docs-usage-w50 docs-usage-center"
-         style="height:200px">
-      <img src="assets/img/doc/slidertoggle-dont.png"
-           alt="">
+    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:200px">
+      <img src="assets/img/doc/slidertoggle-dont.png" alt="">
     </div>
   </div>
 
@@ -127,21 +118,20 @@
 
   <div class="doc-title-2">
     Design Specs
-    <span class="docs-markdown-h3"
-          id="design_specs">
+    <span class="docs-markdown-h3" id="design_specs">
       <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
 
-  <div class="docs-usage-spec docs-usage-center"
-       style="height:280px">
-    <img src="assets/img/doc/slidertoggle-spec.png"
-         alt="">
+  <div class="docs-usage-spec docs-usage-center" style="height:280px">
+    <img src="assets/img/doc/slidertoggle-spec.png" alt="">
   </div>
 
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
