--- a/src/assets/documents/components/stepper.html
+++ b/src/assets/documents/components/stepper.html
@@ -14,7 +14,7 @@
   <div class="doc-desc-1">
     Steppers provides a wizard-like workflow by dividing content into logical steps. Steppers display progress through a sequence
     of logical and numbered steps. They may also be used for navigation.</div>
-     
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -81,7 +81,7 @@
 
 
   <div class="doc-title-2">
-    Usage &amp; Content guidelines
+    Usage &amp; Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
@@ -119,6 +119,8 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
