--- a/src/assets/documents/components/toolbar.html
+++ b/src/assets/documents/components/toolbar.html
@@ -4,14 +4,15 @@
 
 <body>
   <div class="doc-category-title ">
-    Navigation    <span class="docs-markdown-h3" id="contents">
+    Navigation
+    <span class="docs-markdown-h3" id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
-    Toolbar  </div>
+    Toolbar </div>
   <div class="doc-desc-1">
-    Toolbar displays information and actions relating to the current screen.  </div>
-     
+    Toolbar displays information and actions relating to the current screen. </div>
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -20,7 +21,7 @@
       <span header-link="examples"></span>Examples</span>
   </div>
   <div class="doc-desc-2">
-    Use in forms to toggle the state of something on or off.  </div>
+    Use in forms to toggle the state of something on or off. </div>
   <div class="doc-example-container">
     <div app-docs-example="toolbar-basic"></div>
   </div>
@@ -67,7 +68,8 @@
   </div>
 
   <div class="doc-desc-2">
-    Toolbar should:    <ul class="doc-list">
+    Toolbar should:
+    <ul class="doc-list">
       <li>Be a container for headers, titles, or actions</li>
       <li>Be positioned in consistent locations in the interface, including title and actions.</li>
       <li>Be clearly title to help differentiate the different sections beneath them.</li>
@@ -80,7 +82,7 @@
 
 
   <div class="doc-title-2">
-    Usage &amp; Content guidelines
+    Usage &amp; Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
@@ -100,7 +102,7 @@
 
 
   <div class="doc-desc-2">
-    Don’t place imagery in toolbar that makes the toolbar’s text and icons illegible.  </div>
+    Don’t place imagery in toolbar that makes the toolbar’s text and icons illegible. </div>
 
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:160px">
@@ -127,14 +129,16 @@
   </div>
 
 
-  <div class="doc-divider"></div>
+  <!-- <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
-  <div sketch-link></div>
+  <div sketch-link></div> -->
 
 
 </body>
