--- a/src/assets/documents/components/tree.html
+++ b/src/assets/documents/components/tree.html
@@ -13,7 +13,7 @@
   </div>
   <div class="doc-desc-1">
     Trees allow navigation between groups of content that are related and at the different level of hierarchy. </div>
-   
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -94,7 +94,7 @@
 
 
   <div class="doc-title-2">
-    Usage &amp; Content guidelines
+    Usage &amp; Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
@@ -132,6 +132,8 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
