--- a/src/document.scss
+++ b/src/document.scss
@@ -42,6 +42,8 @@ a {
   color: #28292b;
   letter-spacing: 0;
   margin-bottom: 16px;
+  height: 34px;
+  line-height:34px;
 }
 .doc-desc-2 {
   /* Use in forms to togg: */
